# geany

./: HACKING  configure.ac  meson.build  wscript
ctags/: Makefile.am
ctags/main/: entry.c  lcpp.c  lcpp.h  parsers.h  parsers_p.h
ctags/parsers/: c.c  cpreprocessor.c  verilog.c
ctags/parsers/cxx/: cxx_qtmoc.c  cxx_subparser.c  cxx_subparser.h  cxx_tag.c
data/: Makefile.am  filetype_extensions.conf
data/filedefs/: filetypes.Kotlin.conf  filetypes.dart  filetypes.prolog
doc/: Makefile.am
m4/: geany-mac-integration.m4
plugins/: geanyfunctions.h
scintilla/: Makefile.am  scintilla_changes.patch
scintilla/gtk/: ScintillaGTK.cxx
scintilla/lexilla/src/: Lexilla.cxx
scintilla/lexlib/: WordList.cxx
scripts/: create_php_tags.py  create_tags_helper.py
src/: document.c  documentprivate.h  editor.c  filetypes.c  filetypes.h  highlighting.c  highlightingmappings.h  keyfile.c  main.c  notebook.c  osx.c  plugindata.h  plugins.c  spawn.c  symbols.c  ui_utils.c  ui_utils.h  utils.c  utils.h
src/tagmanager/: tm_ctags.c  tm_parser.c  tm_parser.h  tm_source_file.c  tm_tag.c
tagmanager/src/: tm_source_file.h  tm_workspace.c
tests/ctags/: Makefile.am  bit_field.c.tags  bug1466117.c.tags  bug1491666.c.tags  bug556646.c.tags  bug639639.h.tags  bug639644.hpp.tags  complex-return.js.tags  enum.f90.tags  enumerators.f90.tags  interfaces.f90.tags  kotlin.kt.tags  namespace.cpp.tags  numlib.f90.tags  recursive.f95.tags  structure.f.tags
